Update project with latest changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header [ngClass]="{ 'header-expanded': !isSidebarOpen, 'header-collapsed': isSidebarOpen }"
-    [isSidebarOpen]="isSidebarOpen"></app-header>
-<app-sidebar [isSidebarOpen]="isSidebarOpen" (toggleSidebar)="toggleSidebar()"></app-sidebar>
-<div class="content" [class.content-expanded]="!isSidebarOpen">
+    [isSidebarOpen]="isSidebarOpen" (toggleSidebar)="toggleSidebar()"></app-header>
+<app-sidebar [isSidebarOpen]=" isSidebarOpen " (toggleSidebar)=" toggleSidebar() "></app-sidebar>
+<div class=" content " [class.content-expanded]=" !isSidebarOpen ">
     <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
