--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,22 +1,15 @@
-<div class="logo" [class.logo-closed]="!isSidebarOpen">
+<div class="logo" [class.closed]="!isSidebarOpen">
     <a href="#">
-        <span class="logo-full" *ngIf="isSidebarOpen">Full Logo</span>
-        <span class="logo-abbr" *ngIf="!isSidebarOpen">F</span>
+        <span class="logo-full" *ngIf="isSidebarOpen">Kurumsal Uygulama Operasyonları</span>
+        <span class="logo-abbr" *ngIf="!isSidebarOpen">K</span>
     </a>
 </div>
 <nav class="sidebar" [class.closed]="!isSidebarOpen">
     <ul class="list-unstyled">
-        <li>
-            <a href="javascript:void(0);" (click)="onToggleSidebar()">
-                <i class="bi bi-list"></i>
-                <!-- Toggle icon -->
-            </a>
-        </li>
         <li><a href="#"><i class="bi bi-house"></i> <span *ngIf="isSidebarOpen">Home</span></a></li>
         <li><a href="#"><i class="bi bi-columns"></i> <span *ngIf="isSidebarOpen">Layouts</span></a></li>
         <li><a href="#"><i class="bi bi-envelope"></i> <span *ngIf="isSidebarOpen">Email</span></a></li>
         <li><a href="#"><i class="bi bi-calendar"></i> <span *ngIf="isSidebarOpen">Calendar</span></a></li>
         <li><a href="#"><i class="bi bi-bar-chart"></i> <span *ngIf="isSidebarOpen">Charts</span></a></li>
-
     </ul>
 </nav>
